--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,8 @@ jobs:
             uses: actions/checkout@v3
 
           - name: Set up Docker
-            run: sudo apt-get update && sudo apt-get install -y docker.io
+            run: sudo apt-get update && sudo apt-get install -y build-essential
+
 
           - name: Build Docker image
             run: docker build -t fwc .
