--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,7 @@ jobs:
             uses: actions/checkout@v3
 
           - name: Set up Docker
-            run: sudo apt-get update && sudo apt-get install -y build-essential
+            run: sudo apt-get update && sudo apt-get install -y build-essential && pip install pytest
 
-          - name: Build Docker image
-            run: docker build -t fwc .
-
-          - name: Run make test (Docker)
-            run: docker run --rm fwc make test
+          - name: Run make test 
+            run: make test
