--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
             uses: actions/checkout@v3
 
           - name: Set up Docker
-            run: sudo apt-get update && sudo apt-get install -y build-essential && pip install pytest
+            run: sudo apt-get update && sudo apt-get install -y build-essential valgrind make python3 && pip3 install pytest
 
           - name: Run make test 
             run: make test
