--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,8 @@ jobs:
           - name: Set up Docker
             run: sudo apt-get update && sudo apt-get install -y build-essential valgrind make python3 && pip3 install pytest
 
-          - name: Run make test 
-            run: make test
+          - name: Run make build 
+            run: make build
+
+          - name: Run make rebuild 
+            run: make rebuild
