opt merge dicts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "dict.h": "c",
-        "stdint.h": "c"
+        "stdint.h": "c",
+        "__node_handle": "c"
     }
 }
